Add Endpoint to return aloha editor script URLs